# LLM-workshop-2024

./: .gitignore  pyproject.toml
