[project]
name = "llm-workshop-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.26.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "litgpt>=0.4.5",
    "matplotlib>=3.9.2",
    "numpy>=1.25,<2.0",
    "pandas>=2.2.3",
    "safetensors>=0.4.5",
    "tensorflow>=2.14.0",
    "tiktoken>=0.8.0",
    "torch>=2.0.1",
    "tqdm>=4.67.0",
]
